[gd_scene load_steps=3 format=3 uid="uid://mr1auxuvyd41"]

[ext_resource type="Script" uid="uid://ceny42353d64w" path="res://scenes/enemy_handler/EnemyHandler.gd" id="1_dl6d6"]
[ext_resource type="AudioStream" uid="uid://cysjrr6f3s1p7" path="res://assets/audio/enemy_destroyed.wav" id="2_mxavo"]

[node name="EnemyHandler" type="Node2D"]
script = ExtResource("1_dl6d6")

[node name="Enemies" type="Node2D" parent="."]

[node name="Timers" type="Node" parent="."]

[node name="SpawnTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="MoveDownTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="CreateBulletTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="EnemyDestroySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_mxavo")
volume_db = -15.0

[connection signal="timeout" from="Timers/SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="Timers/MoveDownTimer" to="." method="_on_move_down_timer_timeout"]
[connection signal="timeout" from="Timers/CreateBulletTimer" to="." method="_on_create_bullet_timer_timeout"]
